--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "website"
   ],
   "dependencies": {
-    "gh-pages": "^2.0.1",
+    "chartjs": "^0.3.24",
+    "foundation-sites": "^6.5.1",
+    "jquery": "^3.3.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0"
   },
   "devDependencies": {
@@ -20,13 +23,15 @@
     "@types/node": "^10.12.10",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
+    "@types/react-router-dom": "^4.3.1",
+    "gh-pages": "^2.0.1",
     "typescript": "^3.1.6"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom"
+    "test": "react-scripts-ts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   }
 }
