--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "website"
   ],
   "dependencies": {
-    "chartjs": "^0.3.24",
+    "chart.js": "^2.7.3",
     "foundation-sites": "^6.5.1",
     "jquery": "^3.3.1",
     "react": "^16.6.3",
@@ -19,6 +19,7 @@
     "react-scripts-ts": "3.1.0"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.7.41",
     "@types/jest": "^23.3.9",
     "@types/node": "^10.12.10",
     "@types/react": "^16.7.7",
