--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ci": "run-p -r start cy:run:ci",
     "cy:open": "cypress open",
     "cy:run": "wait-on http://localhost:8000 && cypress run --headless --browser chrome",
-    "cy:run:ci": "npm run cy:run -- --config-file cypress-test.json",
+    "cy:run:ci": "export NODE_ENV=test && npm run cy:run -- --config-file cypress-test.json",
     "cy:verify": "npx cypress verify",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
