--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "scripts": {
     "build": "gatsby build",
-    "start": "gatsby develop -o",
-    "ci": "run-p -r start cy:run:ci",
+    "start": " gatsby develop -o",
+    "start:ci" : "export NODE_ENV=dev && npm run start",
+    "ci": "run-p -r start:ci cy:run:ci",
     "cy:open": "cypress open",
     "cy:run": "wait-on http://localhost:8000 && cypress run --headless --browser chrome",
-    "cy:run:ci": "export NODE_ENV=test && npm run cy:run -- --config-file cypress-test.json",
+    "cy:run:ci": "npm run cy:run -- --config-file cypress-test.json",
     "cy:verify": "npx cypress verify",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
