--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "gatsby build",
     "start": " gatsby develop -o",
-    "start:ci" : "export NODE_ENV=dev && npm run start",
+    "start:ci" : "export NODE_ENV=development && npm run start",
     "ci": "run-p -r start:ci cy:run:ci",
     "cy:open": "cypress open",
     "cy:run": "wait-on http://localhost:8000 && cypress run --headless --browser chrome",
