--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "scripts": {
     "build": "gatsby build",
     "start": " gatsby develop -o",
-    "start:ci" : "export NODE_ENV=development && npm run start",
+    "start:ci": "export NODE_ENV=development && npm run start",
     "ci": "run-p -r start:ci cy:run:ci",
     "cy:open": "cypress open",
-    "cy:run": "wait-on http://localhost:8000 && cypress run --headless --browser chrome",
-    "cy:run:ci": "npm run cy:run -- --config-file cypress-test.json",
+    "cy:run": "cypress run --headless --browser chrome",
+    "cy:run:ci": "npm run test -- --config-file cypress-test.json",
     "cy:verify": "npx cypress verify",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
     "reset": "rm -rf .cache/ public/",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+    "test": "wait-on http://localhost:8000 && npm run test"
   },
   "dependencies": {
     "axios": "0.21.1",
@@ -28,7 +28,6 @@
     "gatsby": "3.2.1",
     "gatsby-image": "3.2.0",
     "gatsby-plugin-canonical-urls": "3.2.0",
-    "gatsby-plugin-favicon": "3.1.6",
     "gatsby-plugin-google-analytics": "3.2.0",
     "gatsby-plugin-manifest": "3.2.0",
     "gatsby-plugin-nprogress": "3.2.0",
