--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "ci": "run-p -r start:ci cy:run:ci",
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
-    "cy:run:ci": "npm run test -- --config-file cypress-test.json",
+    "cy:run:ci": "wait-on http://localhost:8000 && npm run cy:run -- --config-file cypress-test.json",
     "cy:verify": "npx cypress verify",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
     "reset": "rm -rf .cache/ public/",
-    "test": "wait-on http://localhost:8000 && npm run test"
+    "test":  "npm run cy:run"
   },
   "dependencies": {
     "axios": "0.21.1",
