--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "build": "gatsby build",
     "start": " gatsby develop -o",
-    "start:ci": "export NODE_ENV=development && npm run start",
-    "ci": "run-p -r start:ci cy:run:ci",
+    "ci": "run-p -r start cy:run:ci",
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
     "cy:run:ci": "wait-on http://localhost:8000 && npm run cy:run -- --config-file cypress-test.json",
