--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install: yarn install --frozen-lockfile
 
 cache:
   directories:
-    - '$HOME/.npm'
+    - "$HOME/.npm"
     - ~/.cache/yarn
     - ~/.cache/Cypress
 
