--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "Portfolio professionnel",
   "homepage": "https://arnaudflaesch.github.io",
   "private": true,
-
   "engines": {
     "node": ">=14.0.0 <=15.12.0",
     "npm": "7.10.0"
@@ -38,6 +37,7 @@
     "gatsby-plugin-nprogress": "3.3.0",
     "gatsby-plugin-offline": "4.3.0",
     "gatsby-plugin-react-helmet": "4.3.0",
+    "gatsby-plugin-sass": "4.3.0",
     "gatsby-plugin-sharp": "3.3.0",
     "gatsby-plugin-sitemap": "3.3.0",
     "gatsby-plugin-styled-components": "4.3.0",
@@ -51,6 +51,7 @@
     "react-dom": "17.0.2",
     "react-google-recaptcha": "2.1.0",
     "react-helmet": "6.1.0",
+    "sass": "1.32.10",
     "styled-components": "5.2.3",
     "yup": "0.32.9"
   },
