Hide favicon, deploy via Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,4 @@ after_success:
   - cat ./coverage/lcov.info | coveralls
   - cat ./coverage/lcov.info | codacy-coverage
   - bash <(curl -s https://codecov.io/bash)
+  - test $TRAVIS_BRANCH = "develop" && yarn run build
