--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
   "homepage": "https://arnaudflaesch.github.io",
   "private": true,
   "engines": {
-    "node": ">=14.0.0 <=15.12.0",
-    "npm": "7.13.0"
+    "node": "16.x",
+    "npm": "7.x"
   },
   "scripts": {
     "build": "export NODE_ENV=production && gatsby build",
     "start": "gatsby develop -o",
     "start:ci": "export NODE_ENV=development && npm run start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d public",
     "ci": "run-p -r start:ci cy:run:ci",
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
