--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,27 +18,23 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16.1.0 # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
+          node-version: 14.18.0
 
       - uses: actions/cache@v2
         with:
-          path: |
-            **/node_modules
-            ~/.cache/Cypress
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-      - run: yarn install --frozen-lockfile
+      - run: npm ci
       - run: npm i -g codacy-coverage npm-run-all wait-on
 
       - name: Build
         run: npm run build
 
       - name: Test
-        run: npm run ci
+        run: npm run test:ci
 
       - name: Send coverage report
         run: |
