--- a/package.json
+++ b/package.json
@@ -6,73 +6,57 @@
   "homepage": "https://arnaudflaesch.github.io",
   "private": true,
   "engines": {
-    "node": "16.x",
-    "npm": "7.x"
+    "node": "14.x",
+    "npm": "6.x"
   },
   "scripts": {
-    "build": "export NODE_ENV=production && gatsby build",
     "start": "gatsby develop -o",
     "start:ci": "export NODE_ENV=development && npm run start",
-    "ci": "run-p -r start:ci cy:run:ci",
+    "build": "export NODE_ENV=production && gatsby build",
+    "test:ci": "run-p -r start:ci cy:run:ci",
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
     "cy:run:ci": "wait-on http://localhost:8000 && npm run cy:run -- --config-file cypress-test.json",
     "cy:verify": "npx cypress verify",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "reset": "rm -rf .cache/ public/",
-    "test": "npm run cy:run"
+    "test": "npm run cy:run",
+    "clean": "gatsby clean",
+    "serve": "gatsby serve"
   },
   "dependencies": {
-    "axios": "0.21.4",
-    "dotenv": "10.0.0",
-    "formik": "2.2.9",
-    "gatsby": "3.14.0",
-    "gatsby-image": "3.11.0",
-    "gatsby-plugin-canonical-urls": "3.14.0",
-    "gatsby-plugin-google-analytics": "3.14.0",
-    "gatsby-plugin-manifest": "3.14.0",
-    "gatsby-plugin-nprogress": "3.14.0",
-    "gatsby-plugin-offline": "4.14.0",
-    "gatsby-plugin-react-helmet": "4.14.0",
-    "gatsby-plugin-sharp": "3.14.0",
-    "gatsby-plugin-sitemap": "4.10.0",
-    "gatsby-plugin-styled-components": "4.14.0",
-    "gatsby-source-filesystem": "3.14.0",
+    "dotenv": "8.6.0",
+    "gatsby": "^3.13.1",
+    "gatsby-plugin-image": "^1.13.0",
+    "gatsby-plugin-manifest": "^3.13.0",
+    "gatsby-plugin-offline": "^4.13.0",
+    "gatsby-plugin-react-helmet": "^4.13.0",
+    "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-source-filesystem": "^3.13.0",
     "gatsby-source-graphql": "3.14.0",
-    "gatsby-transformer-sharp": "3.14.0",
-    "gh-pages": "3.2.3",
-    "prop-types": "15.7.2",
-    "react": "17.0.2",
-    "react-anchor-link-smooth-scroll": "1.0.12",
-    "react-dom": "17.0.2",
-    "react-google-recaptcha": "2.1.0",
-    "react-helmet": "6.1.0",
-    "styled-components": "5.3.1",
-    "yup": "0.32.9"
+    "gatsby-transformer-sharp": "^3.13.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@cypress/code-coverage": "3.9.11",
-    "@types/mocha": "9.0.0",
+    "@types/react-helmet": "^6.1.2",
     "@typescript-eslint/eslint-plugin": "4.31.1",
     "@typescript-eslint/parser": "4.31.1",
-    "babel-eslint": "10.1.0",
-    "babel-plugin-istanbul": "6.0.0",
-    "babel-plugin-styled-components": "1.13.2",
-    "babel-preset-gatsby": "1.14.0",
+    "autoprefixer": "^10.3.4",
     "cypress": "8.4.1",
     "eslint": "7.32.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-config-wesbos": "2.0.1",
-    "eslint-plugin-html": "6.1.2",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.25.2",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "gatsby-plugin-sass": "^4.14.0",
+    "gh-pages": "3.2.3",
     "prettier": "2.4.1",
-    "typescript": "4.4.3",
+    "sass": "^1.41.1",
+    "tailwindcss": "^2.2.15",
+    "typescript": "^4.4.3",
     "wait-on": "6.0.0"
   }
 }
