--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
+  "include": ["./src/"],
   "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "baseUrl": "src",
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "lib": ["dom", "es2017"],
+    "jsx": "react",
+    "strict": true,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "jsx": "react"
+    "emitDecoratorMetadata": true,
+    "noEmit": true,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*", "typings.d.ts"]
+  "exclude": ["node_modules", "**/coverage/**", "cypress"]
 }
