--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@typescript-eslint/eslint-plugin": "4.31.1",
     "@typescript-eslint/parser": "4.31.1",
     "autoprefixer": "^10.3.4",
+    "babel-plugin-istanbul": "6.0.0",
+    "babel-preset-gatsby": "1.14.0",
     "cypress": "8.4.1",
     "eslint": "7.32.0",
     "eslint-plugin-prettier": "4.0.0",
