--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "cy:verify": "npx cypress verify",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
+    "lint:styles": "stylelint \"src/**/*.{css,scss,sass}\" ",
+    "lint:styles:fix": "stylelint \"src/**/*.{css,scss,sass}\" --fix ",
+    "lint:styles:report": "npm run lint:styles -- --formatter json --output-file ./styleLintReport.json",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "reset": "rm -rf .cache/ public/",
     "test": "npm run cy:run",
@@ -57,6 +60,8 @@
     "gh-pages": "3.2.3",
     "prettier": "2.4.1",
     "sass": "^1.41.1",
+    "stylelint": "13.13.1",
+    "stylelint-config-standard": "22.0.0",
     "tailwindcss": "^2.2.15",
     "typescript": "^4.4.3",
     "wait-on": "6.0.0"
