--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,14 @@
 {
     "extends": "stylelint-config-standard",
     "rules": {
+        "at-rule-no-unknown": [
+            true,
+            {
+                "ignoreAtRules": [
+                    "tailwind"
+                ]
+            }
+        ],
         "selector-id-pattern": "^[a-z][a-zA-Z0-9]+$",
         "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$"
     }
