--- a/package.json
+++ b/package.json
@@ -50,19 +50,20 @@
     "@types/react-helmet": "^6.1.2",
     "@typescript-eslint/eslint-plugin": "4.31.1",
     "@typescript-eslint/parser": "4.31.1",
-    "autoprefixer": "^10.3.4",
+    "autoprefixer": "10.3.6",
     "babel-plugin-istanbul": "6.0.0",
     "babel-preset-gatsby": "1.14.0",
     "cypress": "8.4.1",
     "eslint": "7.32.0",
     "eslint-plugin-prettier": "4.0.0",
-    "gatsby-plugin-sass": "^4.14.0",
+    "gatsby-plugin-postcss": "4.14.0",
     "gh-pages": "3.2.3",
+    "postcss": "8.3.8",
     "prettier": "2.4.1",
     "sass": "^1.41.1",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
-    "tailwindcss": "^2.2.15",
+    "tailwindcss": "2.2.16",
     "typescript": "^4.4.3",
     "wait-on": "6.0.0"
   }
