--- a/package.json
+++ b/package.json
@@ -30,21 +30,14 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "axios": "0.22.0",
-    "dotenv": "10.0.0",
-    "formik": "2.2.9",
-    "gatsby": "3.14.1",
-    "gatsby-image": "3.11.0",
-    "gatsby-plugin-canonical-urls": "3.14.0",
-    "gatsby-plugin-google-analytics": "3.14.0",
-    "gatsby-plugin-manifest": "3.14.0",
-    "gatsby-plugin-nprogress": "3.14.0",
-    "gatsby-plugin-offline": "4.14.0",
-    "gatsby-plugin-react-helmet": "4.14.0",
-    "gatsby-plugin-sharp": "3.14.1",
-    "gatsby-plugin-sitemap": "4.10.0",
-    "gatsby-plugin-styled-components": "4.14.0",
-    "gatsby-source-filesystem": "3.14.0",
+    "dotenv": "8.6.0",
+    "gatsby": "^3.13.1",
+    "gatsby-plugin-image": "^1.13.0",
+    "gatsby-plugin-manifest": "^3.13.0",
+    "gatsby-plugin-offline": "^4.13.0",
+    "gatsby-plugin-react-helmet": "^4.13.0",
+    "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-source-filesystem": "^3.13.0",
     "gatsby-source-graphql": "3.14.0",
     "gatsby-transformer-sharp": "^3.13.0",
     "prop-types": "^15.7.2",
@@ -54,10 +47,10 @@
   },
   "devDependencies": {
     "@cypress/code-coverage": "3.9.11",
-    "@types/mocha": "9.0.0",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
-    "babel-eslint": "10.1.0",
+    "@types/react-helmet": "^6.1.2",
+    "@typescript-eslint/eslint-plugin": "4.31.1",
+    "@typescript-eslint/parser": "4.31.1",
+    "autoprefixer": "10.3.6",
     "babel-plugin-istanbul": "6.0.0",
     "babel-preset-gatsby": "1.14.0",
     "cypress": "8.4.1",
