--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "cy:run": "cypress run --headless --browser chrome",
     "cy:run:ci": "wait-on http://localhost:8000 && npm run cy:run -- --config-file cypress-test.json",
     "cy:verify": "npx cypress verify",
-    "eslint": "eslint .",
-    "eslint:fix": "eslint . --fix",
+    "eslint": "eslint src/",
+    "eslint:fix": "eslint src/ --fix",
     "lint:styles": "stylelint \"src/**/*.{css,scss,sass}\" ",
     "lint:styles:fix": "stylelint \"src/**/*.{css,scss,sass}\" --fix ",
     "lint:styles:report": "npm run lint:styles -- --formatter json --output-file ./styleLintReport.json",
@@ -55,6 +55,8 @@
     "babel-preset-gatsby": "1.14.0",
     "cypress": "8.4.1",
     "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-prettier": "4.0.0",
     "gatsby-plugin-postcss": "4.14.0",
     "gh-pages": "3.2.3",
