--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "cy:run:ci": "wait-on http://localhost:8000 && npm run cy:run -- --config-file cypress-test.json",
     "cy:verify": "npx cypress verify",
     "eslint": "eslint src/",
-    "eslint:fix": "eslint src/ --fix",
+    "eslint:fix": "npm run eslint -- --fix",
     "lint:styles": "stylelint \"src/**/*.{css,scss,sass}\" ",
-    "lint:styles:fix": "stylelint \"src/**/*.{css,scss,sass}\" --fix ",
+    "lint:styles:fix": "npm run lint:styles -- --fix ",
     "lint:styles:report": "npm run lint:styles -- --formatter json --output-file ./styleLintReport.json",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "reset": "rm -rf .cache/ public/",
     "test": "npm run cy:run",
     "clean": "gatsby clean",
     "serve": "gatsby serve"
