--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,4 +12,4 @@ sonar.exclusions=public/**,nodes_modules/**
 sonar.coverage.exclusions = "cypress/**"
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.css.stylelint.reportPaths=styleLintReport.json
+sonar.css.stylelint.reportPaths=./styleLintReport.json
