--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.sources=src
 
 sonar.sourceEncoding=UTF-8
 
-sonar.exclusions=public/**,nodes_modules/**,src/styles/global.css
+sonar.exclusions=public/**,nodes_modules/**
 sonar.coverage.exclusions = "cypress/**"
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
