--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,23 +30,17 @@ jobs:
             ${{ runner.os }}-node-
 
       - run: npm ci
-      - run: npm i -g npm-run-all wait-on
 
-      #  - name: Lint
-      #    run: |
-      #     npm run lint:styles:report
-      #     npm run eslint
+      - name: Lint
+        run: |
+          npm run lint:styles:report
+          npm run eslint
 
-      #   - name: Build
-      #    run: npm run build
+      - name: Build
+        run: npm run build
 
       - name: Test
         run: npm run test:ci
-
-      - name: Send coverage report
-        run: |
-          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r coverage/clover.xml --project-token ${{ secrets.CODACY_PROJECT_TOKEN }}
-          bash <(curl -s https://codecov.io/bash)
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
