--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "gatsby-plugin-postcss": "4.14.0",
     "gh-pages": "3.2.3",
+    "npm-run-all": "4.1.5",
     "postcss": "8.3.8",
     "prettier": "2.4.1",
     "sass": "^1.41.1",
