--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,4 @@
 {
-  "extends": [
-    "config:base"
-  ],
-  "assignees": [
-    "ArnaudFlaesch"
-  ]
+  "extends": ["config:base"],
+  "assignees": ["ArnaudFlaesch"]
 }
