--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "gatsby develop -o",
     "build": "export NODE_ENV=production && gatsby build",
-    "test:ci": "run-p -r start:ci cy:run:ci",
+    "test:ci": "run-p -r start cy:run:ci",
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
     "cy:run:ci": "wait-on http://localhost:8000 && npm run cy:run -- --config-file cypress-test.json",
