--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-plugin-manifest": "^3.13.0",
     "gatsby-plugin-offline": "^4.13.0",
     "gatsby-plugin-react-helmet": "^4.13.0",
+    "gatsby-plugin-sass": "4.14.0",
     "gatsby-plugin-sharp": "^3.13.0",
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-source-graphql": "3.14.0",
@@ -59,7 +60,7 @@
     "npm-run-all": "4.1.5",
     "postcss": "8.3.8",
     "prettier": "2.4.1",
-    "sass": "^1.41.1",
+    "sass": "1.42.1",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
     "tailwindcss": "2.2.16",
