--- a/package.json
+++ b/package.json
@@ -36,8 +36,13 @@
     "gatsby-plugin-react-helmet": "4.14.0",
     "gatsby-plugin-sass": "4.14.0",
     "gatsby-plugin-sharp": "3.14.1",
+    "gatsby-remark-copy-linked-files": "4.11.0",
+    "gatsby-remark-images": "5.11.0",
+    "gatsby-remark-responsive-iframe": "4.11.0",
+    "gatsby-remark-smartypants": "4.11.0",
     "gatsby-source-filesystem": "3.14.0",
     "gatsby-source-graphql": "3.14.0",
+    "gatsby-transformer-remark": "4.11.0",
     "gatsby-transformer-sharp": "3.14.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
