--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "gatsby-plugin-sharp": "3.14.1",
     "gatsby-remark-copy-linked-files": "4.11.0",
     "gatsby-remark-images": "5.11.0",
+    "gatsby-remark-prismjs": "5.11.0",
     "gatsby-remark-responsive-iframe": "4.11.0",
     "gatsby-remark-smartypants": "4.11.0",
     "gatsby-source-filesystem": "3.14.0",
     "gatsby-source-graphql": "3.14.0",
     "gatsby-transformer-remark": "4.11.0",
     "gatsby-transformer-sharp": "3.14.0",
+    "prismjs": "1.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0"
