--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,7 +7,8 @@
         "ignoreAtRules": ["tailwind"]
       }
     ],
-    "selector-id-pattern": "^[a-z][a-zA-Z0-9]+$",
-    "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$"
+    "selector-id-pattern": "^([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
+    "selector-class-pattern": "^([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
+    "indentation": 2
   }
 }
