--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,9 @@ jobs:
           npm run eslint
 
       - name: Build
-        run: npm run build
+        run: |
+          echo REACT_APP_STEAMFACEBOOK_SDK_APP_ID_API_KEY=${{ secrets.FACEBOOK_SDK_APP_ID }} >> .env.production
+          npm run build
 
       - name: Test
         run: npm run test:ci
