--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "prismjs": "1.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-helmet": "6.1.0"
+    "react-helmet": "6.1.0",
+    "react-twitter-widgets": "1.10.0"
   },
   "devDependencies": {
     "@cypress/code-coverage": "3.9.11",
