--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Lint
         run: |
+          npm run lint:styles
           npm run lint:styles:report
           npm run eslint
 
