--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:ci": "run-p -r start cy:run:ci",
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
-    "cy:run:ci": "wait-on http://localhost:8000 && npm run cy:run -- --config-file cypress-test.json",
+    "cy:run:ci": "wait-on http://localhost:8000 && npm run cy:run -- --config-file cypress-test.config.ts",
     "cy:verify": "npx cypress verify",
     "eslint": "eslint src/",
     "eslint:fix": "npm run eslint -- --fix",
