--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,17 +16,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.12.1
+          cache: 'npm'
 
-      - uses: actions/cache@v3
-        with:
-          path: |
-            - ~/.npm
-            - ~/.cache/Cypress
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
       - name: Lint
         run: |
