--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: Node.js CI
 
-on: ["push"]
+on: ['push']
 
 jobs:
   test:
@@ -15,7 +15,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18.15.0
+          node-version: 20.8.1
           cache: 'npm'
 
       - name: Install dependencies
