--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,13 @@ jobs:
         run: |
           npm run build
 
-      - name: Test
-        run: npm run test:ci
+      - name: Tests
+        uses: cypress-io/github-action@v6
+        with:
+          browser: firefox
+          config-file: cypress-test.config.ts
+          start: npm start
+          wait-on: 'http://localhost:8000'
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
@@ -40,10 +45,26 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: Deploy with gh-pages
+      - name: Upload pages artifact
+        uses: actions/upload-pages-artifact@v2
         if: success() && github.ref == 'refs/heads/master'
-        run: |
-          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          npx gh-pages -d public -u "github-actions-bot <support+actions@github.com>"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          path: ./public
+
+  deploy:
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+    needs: test
+    if: success() && github.ref == 'refs/heads/master'
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
