--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "gatsby-plugin-manifest": "5.12.3",
     "gatsby-plugin-offline": "6.12.3",
     "gatsby-plugin-react-helmet": "6.12.0",
+    "gatsby-plugin-robots-txt": "1.8.0",
     "gatsby-plugin-sass": "6.12.3",
     "gatsby-plugin-sharp": "5.12.3",
+    "gatsby-plugin-sitemap": "6.12.3",
     "gatsby-remark-copy-linked-files": "6.12.0",
     "gatsby-remark-images": "7.12.3",
     "gatsby-remark-prismjs": "7.12.0",
