--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,14 +1,17 @@
 {
-  "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier-scss"],
+  "extends": [
+    "stylelint-config-standard-scss"
+  ],
   "rules": {
     "at-rule-no-unknown": [
       true,
       {
-        "ignoreAtRules": ["tailwind"]
+        "ignoreAtRules": [
+          "tailwind"
+        ]
       }
     ],
     "selector-id-pattern": "^([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
-    "selector-class-pattern": "^([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
-    "indentation": 2
+    "selector-class-pattern": "^([a-z][a-z0-9]*)(-[a-z0-9]+)*$"
   }
 }
