--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "@formspree/react": "2.5.1",
+    "axios": "1.6.5",
     "dotenv": "16.3.1",
     "gatsby": "5.13.1",
     "gatsby-plugin-image": "3.13.0",
