--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@formspree/react": "2.5.1",
+    "date-fns": "3.2.0",
     "dotenv": "16.3.1",
     "gatsby": "5.13.1",
     "gatsby-plugin-image": "3.13.0",
