--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
+    "@fontsource/roboto": "5.0.8",
     "@formspree/react": "2.5.1",
+    "@mui/material": "5.15.5",
     "date-fns": "3.2.0",
     "dotenv": "16.3.2",
     "gatsby": "5.13.1",
