--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@emotion/styled": "11.11.0",
     "@fontsource/roboto": "5.0.8",
     "@formspree/react": "2.5.1",
+    "@mui/icons-material": "5.15.5",
     "@mui/material": "5.15.5",
     "date-fns": "3.2.0",
     "dotenv": "16.3.2",
