--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
+    "@fontsource/roboto": "5.0.8",
     "@formspree/react": "2.5.1",
+    "@mui/icons-material": "5.15.5",
+    "@mui/material": "5.15.5",
+    "date-fns": "3.2.0",
     "dotenv": "16.3.2",
     "gatsby": "5.13.1",
     "gatsby-plugin-image": "3.13.0",
@@ -55,7 +61,6 @@
     "@types/react-helmet": "6.1.11",
     "@typescript-eslint/eslint-plugin": "6.19.0",
     "@typescript-eslint/parser": "6.19.0",
-    "autoprefixer": "10.4.17",
     "cypress": "13.6.3",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
@@ -63,12 +68,10 @@
     "eslint-plugin-prettier": "5.1.3",
     "gatsby-plugin-postcss": "6.13.0",
     "gh-pages": "6.1.1",
-    "postcss": "8.4.33",
     "prettier": "3.2.4",
     "sass": "1.70.0",
     "stylelint": "16.2.0",
     "stylelint-config-standard-scss": "13.0.0",
-    "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   }
 }
