--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,19 +32,19 @@ jobs:
           npm run clean
           npm run build
 
-      - name: Tests
-        uses: cypress-io/github-action@v6
-        with:
-          browser: firefox
-          config-file: cypress-test.config.ts
-          start: npm start
-          wait-on: 'http://localhost:8000'
+      #  - name: Tests
+      #     uses: cypress-io/github-action@v6
+      #     with:
+      #      browser: firefox
+      #       config-file: cypress-test.config.ts
+      #      start: npm start
+      #     wait-on: 'http://localhost:8000'
 
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #  - name: SonarCloud Scan
+      #    uses: SonarSource/sonarcloud-github-action@master
+      #    env:
+      #      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
