--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       GATSBY_PORTFOLIO_GITHUB_TOKEN: ${{ secrets.GATSBY_PORTFOLIO_GITHUB_TOKEN }}
 
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11  v4
 
       - name: Use Node.js
         uses: actions/setup-node@v4
@@ -32,23 +32,23 @@ jobs:
           npm run clean
           npm run build
 
-      #  - name: Tests
-      #     uses: cypress-io/github-action@v6
-      #     with:
-      #      browser: firefox
-      #       config-file: cypress-test.config.ts
-      #      start: npm start
-      #     wait-on: 'http://localhost:8000'
+      - name: Tests
+        uses: cypress-io/github-action@v6
+        with:
+          browser: firefox
+          config-file: cypress-test.config.ts
+          start: npm start
+          wait-on: 'http://localhost:8000'
 
-      #  - name: SonarCloud Scan
-      #    uses: SonarSource/sonarcloud-github-action@master
-      #    env:
-      #      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
-        # if: success() && github.ref == 'refs/heads/master'
+        if: success() && github.ref == 'refs/heads/master'
         with:
           path: ./public
 
@@ -63,7 +63,7 @@ jobs:
 
     runs-on: ubuntu-latest
     needs: test
-    # if: success() && github.ref == 'refs/heads/master'
+    if: success() && github.ref == 'refs/heads/master'
 
     steps:
       - name: Deploy to GitHub Pages
