--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "gatsby-plugin-image": "3.13.1",
     "gatsby-plugin-manifest": "5.13.1",
     "gatsby-plugin-offline": "6.13.1",
-    "gatsby-plugin-react-helmet": "6.13.1",
     "gatsby-plugin-robots-txt": "1.8.0",
     "gatsby-plugin-sass": "6.13.1",
     "gatsby-plugin-sharp": "5.13.1",
@@ -54,11 +53,9 @@
     "gatsby-transformer-sharp": "5.13.1",
     "prismjs": "1.29.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-helmet": "6.1.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react-helmet": "6.1.11",
     "@typescript-eslint/eslint-plugin": "6.20.0",
     "@typescript-eslint/parser": "6.20.0",
     "cypress": "13.6.4",
