--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-prettier": "5.1.3",
     "gh-pages": "6.1.1",
+    "markdownlint": "0.33.0",
     "prettier": "3.2.5",
     "sass": "1.70.0",
     "stylelint": "16.2.1",
