--- a/package.json
+++ b/package.json
@@ -62,9 +62,9 @@
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
+    "eslint-plugin-markdownlint": "0.5.0",
     "eslint-plugin-prettier": "5.1.3",
     "gh-pages": "6.1.1",
-    "markdownlint": "0.33.0",
     "prettier": "3.2.5",
     "sass": "1.70.0",
     "stylelint": "16.2.1",
