--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "3.3.1",
     "dotenv": "16.4.1",
     "gatsby": "5.13.3",
+    "gatsby-plugin-feed": "5.13.1",
     "gatsby-plugin-image": "3.13.1",
     "gatsby-plugin-manifest": "5.13.1",
     "gatsby-plugin-offline": "6.13.1",
