--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
     "cy:verify": "npx cypress verify",
+    "lint:md": "markdownlint **/*.md",
+    "lint:md:fix": "npm run lint:md -- --fix",
     "eslint": "eslint src/",
     "eslint:fix": "npm run eslint -- --fix",
     "lint:styles": "stylelint \"src/**/*.{css,scss,sass}\" ",
@@ -66,6 +68,7 @@
     "eslint-plugin-markdownlint": "0.5.0",
     "eslint-plugin-prettier": "5.1.3",
     "gh-pages": "6.1.1",
+    "markdownlint-cli": "0.39.0",
     "prettier": "3.2.5",
     "sass": "1.70.0",
     "stylelint": "16.2.1",
