--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
     "cy:verify": "npx cypress verify",
+    "lint:md": "markdownlint **/*.md",
+    "lint:md:fix": "npm run lint:md -- --fix",
     "eslint": "eslint src/",
     "eslint:fix": "npm run eslint -- --fix",
     "lint:styles": "stylelint \"src/**/*.{css,scss,sass}\" ",
@@ -35,6 +37,7 @@
     "date-fns": "3.3.1",
     "dotenv": "16.4.4",
     "gatsby": "5.13.3",
+    "gatsby-plugin-feed": "5.13.1",
     "gatsby-plugin-image": "3.13.1",
     "gatsby-plugin-manifest": "5.13.1",
     "gatsby-plugin-offline": "6.13.1",
@@ -62,8 +65,10 @@
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
+    "eslint-plugin-markdownlint": "0.5.0",
     "eslint-plugin-prettier": "5.1.3",
     "gh-pages": "6.1.1",
+    "markdownlint-cli": "0.39.0",
     "prettier": "3.2.5",
     "sass": "1.70.0",
     "stylelint": "16.2.1",
