--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "prismjs": "1.29.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-i18next": "12.3.1"
+    "react-i18next": "12.3.1",
+    "react-photo-view": "1.2.4"
   },
   "devDependencies": {
     "@types/node": "20.12.11",
