--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
-       # if: success() && github.ref_name == 'master'
+        if: success() && github.ref_name == 'master'
         with:
           path: ./public
 
@@ -95,7 +95,7 @@ jobs:
 
     runs-on: ubuntu-latest
     needs: test
-   # if: success() && github.ref_name == 'master'
+    if: success() && github.ref_name == 'master'
 
     steps:
       - name: Deploy to GitHub Pages
