--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint": "9.13.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "3.6.0",
+    "eslint-plugin-vue": "9.29.1",
     "globals": "15.11.0",
     "markdownlint-cli": "0.42.0",
     "mochawesome": "7.1.3",
