--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ max_line_length = 120
 indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
-quote_type = single
+quote_type = double
 
 [*.scss, *.css]
 indent_size = 2
