--- a/package.json
+++ b/package.json
@@ -23,14 +23,13 @@
     "lint:styles": "stylelint \"./**/*.{css,scss,sass}\" ",
     "lint:styles:fix": "npm run lint:styles -- --fix ",
     "lint:styles:report": "npm run lint:styles -- --formatter json --output-file ./styleLintReport.json",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,vue,json,md}\"",
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
     "cy:verify": "npx cypress verify",
     "test": "npm run cy:run"
   },
   "dependencies": {
-    "@fontsource/open-sans": "5.1.0",
     "@nuxt/content": "2.13.4",
     "@nuxt/image": "1.8.1",
     "@nuxt/ui": "2.18.7",
