--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,10 +52,6 @@ jobs:
         with:
           path: ./.output/public
 
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-
       - name: Lint
         run: |
           npm run lint:styles
@@ -70,6 +66,8 @@ jobs:
       - name: Tests
         uses: cypress-io/github-action@v6
         id: e2e-tests
+        env:
+          PORTFOLIO_GITHUB_TOKEN: ${{secrets.PORTFOLIO_GITHUB_TOKEN}}
         with:
           browser: firefox
           config-file: cypress-test.config.ts
