--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    env:
-      PORTFOLIO_GITHUB_TOKEN: ${{ secrets.PORTFOLIO_GITHUB_TOKEN }}
-
-    permissions:
-      pages: write
-      id-token: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
     steps:
       - uses: actions/checkout@v4
 
@@ -45,13 +34,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - run: npx nuxt generate --preset github_pages
-
-      - name: Upload pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./.output/public
-
       - name: Lint
         run: |
           npm run lint:styles
@@ -68,7 +50,6 @@ jobs:
       - name: Tests
         uses: cypress-io/github-action@v6
         id: e2e-tests
-
         with:
           browser: firefox
           config-file: cypress-test.config.ts
@@ -96,6 +77,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Create static folder
+        env:
+          PORTFOLIO_GITHUB_TOKEN: ${{secrets.PORTFOLIO_GITHUB_TOKEN}}
+        run: |
+          npm run clean
+          npx nuxt generate --preset github_pages
 
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
