--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.organization=arnaudflaesch
 sonar.projectName=arnaudflaesch.github.io
 sonar.projectVersion=1.0
 
-sonar.sources=src
+sonar.sources=.
 
 sonar.sourceEncoding=UTF-8
 
