--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:styles": "stylelint \"./**/*.{css,scss,sass}\" ",
     "lint:styles:fix": "npm run lint:styles -- --fix ",
     "lint:styles:report": "npm run lint:styles -- --formatter json --output-file ./styleLintReport.json",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,vue,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,vue,json,md,html}\"",
     "cy:open": "cypress open",
     "cy:run": "cypress run --headless --browser chrome",
     "cy:verify": "npx cypress verify",
@@ -37,6 +37,7 @@
     "@nuxtjs/robots": "4.1.11",
     "@nuxtjs/seo": "2.0.0-rc.23",
     "@nuxtjs/sitemap": "6.1.5",
+    "@vite-pwa/nuxt": "0.10.6",
     "date-fns": "4.1.0",
     "nuxt": "3.14.159",
     "nuxt-graphql-client": "0.2.36",
