--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,10 @@
     {
       "groupName": "eslint-tslint",
       "matchPackageNames": ["/^eslint/", "/typescript-eslint/"]
+    },
+    {
+      "groupName": "nuxt",
+      "matchPackageNames": ["/^nuxt//", "/^@nuxt//","/^@nuxtjs//"]
     }
   ],
   "schedule": ["on wednesday and friday at 2:00 pm"]
